Revamp initial application.
Remove questions about how applicants contributed to open source. We
haven't used that data since we've been collecting it. Keep general
questions about whether they contributed to open source, were paid to
contribute to open source, and if they participated in GSoC or
Outreachy.

Remove help text for a lot of the questions. We often need to change the
wording in the middle of the application period if we find it was
confusing. This means we won't have to do a database migration if we
change the help text.

Add a field for organizers to record notes about official universities.
This will allow us to tell initial application reviewers information
about student eligibility when some students are eligible but others
aren't.

Add a field to the essay questions section. Prompt applicants for
content warnings about their essay answers. Try to word it so they don't
hesitate to submit their essay. Don't use the word "traumatic", as some
people may not think of their experiences as traumatic.

Clarify the help text around time commitments. Try to clear up common
questions, like "If I will quit my job, should I say I'm an employee?"

Clarify instructions for volunteer questions.

Make it more clear when you are on the last page of the initial
application.

Add instructions to the first page for which sections of the Applicant
Guide to read.

The instructions for the school term dates and the contractor time
commitments remain an absolute disaster. Someone please simplify the
English on these pages.

I will sleep now, and hope I haven't messed things up.

--- a/home/templates/home/applicant_review_detail.html
+++ b/home/templates/home/applicant_review_detail.html
@@ -25,6 +25,10 @@
 	{% include 'home/snippet/applicant_review_actions.html' %}
 	<h1>Initial Application</h1>
 
+	{% if application.barrierstoparticipation.content_warnings %}
+		<p>Content warnings: <b>{{ application.barrierstoparticipation.content_warnings }}</b></p>
+	{% endif %}
+
 	<h2>Time Commitment Details</h2>
 	{% include 'home/snippet/time_commitment_overview.html' %}
 	{% include 'home/snippet/applicant_review_time_commitments.html' %}
@@ -121,7 +125,6 @@
 				<b>No</b>, no they have not been paid for their contributions to FOSS.
 			{% endif %}
 		</li>
-		<li>Prior experiences contributing to FOSS as a volunteer or paid contributor: <b>{{ application.priorfossexperience.get_prior_contribution_types }}</b>{% if not application.priorfossexperience.get_prior_contribution_types %}None{% endif %}</li>
 	</ul>
 
 	<h2>Reviewer Comments</h2>
