--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -184,18 +184,20 @@ Applicant Guide | Outreachy Documentation
 <hr>
 <h2 id='initial-application'><a href="#initial-application">Initial Application</a></h2>
 
-<p>The initial application includes several sections. Some sections determine whether you meet our <a href='#eligibility'>eligibility criteria</a>. We also ask you to provide some additional information and essays.</p>
+<p>The initial application has many pages of questions. Some questions determine whether you meet our <a href='#eligibility'>eligibility criteria</a>. It's important to take your time.</p>
 
-<p>You cannot save your initial application. You have to fill it out all at once. Make sure you're ready and have a stable internet connection. Don't submit your initial application at the last minute!</p>
+<p>You cannot save your initial application. You have to fill it out all at once. Make sure you have a stable internet connection.</p>
 
-<p>You should have specific information on hand before you fill out the initial application:</p>
+<p>Before you fill out your application, please have the following information:</p>
 <ul>
-	<li>If you are a university student: The academic calendar, both for this year and next year. If year's calendar is unavailable, use last year's calendar</li>
-	<li>If you are taking online courses: The calendar for the online course</li>
-	<li>If you are participating in a coding school: The calendar for your cohort's schedule</li>
-	<li>If you are (or will be) employed: The number of hours required by your employment contract and dates of employment</li>
-	<li>If you are a self-employed contractor: The average number of invoiced hours over the past six months</li>
+	<li>If you are a university student: Find your academic calendar. You will need your academic calendar for this year. You will need your academic calendar for future school terms. If they are not available, use the term start and end dates from the previous year</li>
+	<li>If you are taking online courses: Find the calendar for your online courses</li>
+	<li>If you are participating in a coding school: Find the calendar for your coding school cohort</li>
+	<li>If you are (or will be) employed: Find your employment contract. Find the number of hours per week your employment contract requires. Know your employment start date and end date.</li>
+	<li>If you are a self-employed contractor: Find the average number of invoiced hours over the past six months</li>
 </ul>
+
+<p>Before you fill out the initial application, write answers to the essay questions.</p>
 
 <h2 id='essay-questions'>Essay questions</h2>
 
@@ -237,6 +239,7 @@ Applicant Guide | Outreachy Documentation
 	<li><p><b>Does your learning environment have few people who share your identity or background? Please provide details.</b> Contributing to free and open source software takes some skill. You may have already learned some basic skills through university or college classes, specialized schools, online classes, online resources, or with a mentor, friend, family member or co-worker. Does any of your learning environments have few people who share your identity or background? How did your identity or background differ from the majority of people in this learning environment? Outreachy Organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</p></li>
 
 	<li><p><b>What systemic bias or discrimination have you faced while building your skills?</b> Outreachy projects often require applicants to know some basic skills. Those skills might include programming, user experience, documentation, illustration and graphical design, or data science. You may have already learned some basic skills through university or college classes, specialized schools, online classes, online resources, or with a mentor, friend, family member or co-worker. In these settings, have you faced systemic bias or discrimination? Have you been discouraged from accessing these resources because of your identity or background? Please provide specific examples and (optionally) statistics. Outreachy Organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</p></li>
+	<li><p><b>(Optional) Content warnings.</b> Some essays may talk about very harsh or hard things. That's okay. There's no need to change your essay. It can help us to know what harsh or hard topics are in your essay. These are called "content warnings". Content warnings can be one or two words. Examples include: "violence", "sexual assault", or "war". Content warnings help reviewers mentally prepare to read your essay. Thank you for your help! If you do you not talk about harsh or hard things in your essays, leave this field blank.</p></li>
 
 </ol>
 
