--- a/home/templates/home/docs/essay-tips-snippet.html
+++ b/home/templates/home/docs/essay-tips-snippet.html
@@ -5,6 +5,10 @@ Make sure to review the help text below the question.
 
 <p>
 On average, applicants who are accepted write 500 to 900 characters per essay question.
+Essay answers are limited to 1000 characters. 1000 characters is about 200 words.
+</p>
+
+<p>
 We prefer essays with detailed examples or stories from your life.
 </p>
 
