--- a/home/templates/home/eligibility_wizard_contractor_info.html
+++ b/home/templates/home/eligibility_wizard_contractor_info.html
@@ -9,6 +9,8 @@ Are you eligible to apply to Outreachy?
 
 {% include "home/snippet/privacy_policy.html" %}
 
+<h2>Contractors and Consultants</h2>
+
 <p>
 If you are a self-employed contractor who owns their own business, hours spent on business development and marketing count for the number of hours spent on your contracting business in the equestion below.
 </p>
