--- a/home/templates/home/eligibility_wizard_general.html
+++ b/home/templates/home/eligibility_wizard_general.html
@@ -8,17 +8,30 @@ Outreachy Initial Application
 <h1>Outreachy Initial Application</h1>
 <img src="https://www.outreachy.org/media/images/bot-eligibility.original.png" class="float-right">
 <p>
-Welcome to Outreachy! We're excited to have you apply for our internships.
-You'll need to fill out an initial application for each round you apply for.
+Welcome to Outreachy!
 </p>
+
+<p>
+You are applying for the {{ current_round.official_name }}.
+</p>
+
+<p>
+Before you fill out the initial application, please read the following:
+</p>
+
+<ul>
+	<li><a href="{% url 'docs-applicant' %}#eligibility">Eligibility criteria</a></li>
+	<li><a href="{% url 'docs-applicant' %}#initial-application">Instructions for the initial application</a></li>
+	<li><a href="{% url 'docs-applicant' %}#essay-questions">List of essay questions in the initial application</a></li>
+	<li><a href="{% url 'docs-applicant' %}#essay-tips">Tips for writing strong essays</a></li>
+</ul>
+
+<p>You cannot save your initial application. You have to fill it out all at once. Make sure you have a stable internet connection.</p>
+
+<h2>General Eligibility</h2>
 
 {% include "home/snippet/privacy_policy.html" %}
 
-<p>
-University and college students who are applying will need to provide information about their school calendar.
-We will ask about your current term and your next term.
-Please have that information before starting this process.
-</p>
 <p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
 <hr>
 
@@ -37,7 +50,9 @@ Please have that information before starting this process.
 				{{ field }}
 			</div>
 			<div class="card-footer bg-white">
-				<p>{{ field.help_text|safe }}</p>
+				<p><b>Student visas</b>: Please note that in some countries, students studying abroad on a student visa may not be eligible to work full-time (40 hours a week). If you are on a student visa, please double check the hours and dates of the internship with your school counselors before applying.</p>
+				<p><b>Spouse visas</b>: In some countries, spousal visas may not allow spouses to work. Please contact your immigration officer if you have any questions about whether your visa allows you to work full-time (40 hours a week).</p>
+				<p><b>International Travel</b>: Outreachy interns are not required to work while they are traveling internationally. If you travel for more than 1 week, you may need to extend your internship. Internships can be extended for up to five weeks with prior approval from your mentor and the Outreachy Organizers.</p>
 			</div>
 		</div>
 	{% elif 'Do you have a student visa' in field.label_tag %}
@@ -50,7 +65,9 @@ Please have that information before starting this process.
 				{{ field }}
 			</div>
 			<div class="card-footer bg-white">
-				<p>{{ field.help_text|safe }}</p>
+				<p>If you are not a student, say 'No'.</p>
+				<p>If you do not have a visa, say 'No'.</p>
+				<p>If you have a student visa that restricts when you can work, or how many hours per week you can work, say 'Yes'.</li>
 			</div>
 		</div>
 	{% elif 'Will you be 18 years' in field.label_tag %}
@@ -61,6 +78,34 @@ Please have that information before starting this process.
 			</div>	    
 			<div class = "card-body">
 				{{ field }}
+			</div>
+		</div>
+	{% elif 'Are you a citizen' in field.label_tag %}
+		<div class="form-group card">
+			{{ field.errors }}
+			<div class = "card-header">
+				{{ field.label_tag }}
+			</div>	    
+			<div class = "card-body">
+				{{ field }}
+			</div>
+			<div class="card-footer bg-white">
+				<p>Outreachy's fiscal parent, Software Freedom Conservancy, is a 501(c)(3) charitable non-profit in the United States of America. As a U.S. non-profit, Conservancy must ensure that funds are not sent to countries under U.S. sanctions programs, such as Cuba, Iran, North Korea, or Syria.</p>
+				<p>If you have citizenship with Cuba, Iran, North Korea, or Syria, please answer yes, even if you are not currently living in those countries. We will follow up with additional questions.</p>
+			</div>
+		</div>
+	{% elif 'Are you a person or entity' in field.label_tag %}
+		<div class="form-group card">
+			{{ field.errors }}
+			<div class = "card-header">
+				{{ field.label_tag }}
+			</div>	    
+			<div class = "card-body">
+				{{ field }}
+			</div>
+			<div class="card-footer bg-white">
+				<p>Make sure to answer this question before going onto the next page of questions.</p>
+				<p>See the <a href="https://www.treasury.gov/resource-center/sanctions/Programs/Pages/Programs.aspx">US export control and sanctions list</a> for more information.</p>
 			</div>
 		</div>
 	{% else %}
