--- a/home/templates/home/eligibility_wizard_school_info.html
+++ b/home/templates/home/eligibility_wizard_school_info.html
@@ -9,9 +9,11 @@ Are you eligible to apply to Outreachy?
 
 {% include "home/snippet/privacy_policy.html" %}
 
+<h2>University or College Information</h2>
+
 <p>
-Please enter information about the university or college you are enrolled in
-from {{ current_round.internstarts|date:"F d, Y" }} to {{ current_round.internends|date:"F d, Y" }}.
+Please enter information about the university or college you are
+currently enrolled in (or will be enrolled in).
 </p>
 <p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
 <hr>
