--- a/home/templates/home/eligibility_wizard_school_terms.html
+++ b/home/templates/home/eligibility_wizard_school_terms.html
@@ -9,6 +9,8 @@ Are you eligible to apply to Outreachy?
 
 {% include "home/snippet/privacy_policy.html" %}
 
+<h2>School Term Dates</h2>
+
 <p><b>Please enter information your current school term and your next two school terms.</b></p>
 
 <p>Common questions about school term dates:</p>
