--- a/home/templates/home/eligibility_wizard_tax_forms.html
+++ b/home/templates/home/eligibility_wizard_tax_forms.html
@@ -8,21 +8,22 @@ Outreachy Initial Application
 <h1>Outreachy Initial Application</h1>
 
 {% include "home/snippet/privacy_policy.html" %}
+
+<h2>Location and Nationality</h2>
 <p>
-In order to be paid, each Outreachy intern will need to fill out one of two tax forms: a W-9 or a W8-BEN.
-Interns who are living outside the United States of America may be eligible to fill out a W8-BEN.
-These questions will help us determine which form you will need to fill out.
+<b>Outreachy is open to people around the world.</b>
+</p>
+
+<p>
+Outreachy interns will need to fill out a tax form. You will need to fill out a W-9 or a W8-BEN tax form. These questions will help us figure out which form you should use.
 </p>
 <p>
-Please note that Outreachy organizers have experience working with people who are in the middle of name changes or who people who wish to use a pseudonym.
+Interns must put their legal names on tax forms. Please note that Outreachy organizers have experience working with people who are in the middle of name changes or who people who wish to use a pseudonym.
 The tax forms with your legal name will not be shared with mentors.
 </p>
 <p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
 <hr>
 
-<form action="" method="post">{% csrf_token %}
-{{ wizard.form.media }}
-{{ wizard.management_form }}
 <form action="" method="post">{% csrf_token %}
 {{ wizard.form.media }}
 {{ wizard.management_form }}
