--- a/home/templates/home/eligibility_wizard_us_demographics.html
+++ b/home/templates/home/eligibility_wizard_us_demographics.html
@@ -9,6 +9,7 @@ Outreachy Initial Application
 
 {% include "home/snippet/privacy_policy.html" %}
 
+<h2>Race and Ethnicity</h2>
 <p>
 The following question applies to U.S. citizens and permanent residents.
 </p>
