Add documentation about legal names to applicant guide

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -21,6 +21,7 @@ Applicant Guide | Outreachy Documentation
 <a href='#outreachy-schedule'>Outreachy schedule</a><br>
 <a href='#application-period'>Application period overview</a><br>
 <a href="#initial-application">Initial application</a><br>
+<a href='#legal-names'>Legal names in Outreachy</a><br>
 <a href="#application-prep">Preparing for the contribution period</a><br>
 <a href="#find-mentor">Finding a Mentor and an Internship Project</a><br>
 <a href="#make-contributions">Making Contributions</a><br>
@@ -246,6 +247,29 @@ Applicant Guide | Outreachy Documentation
 <h3 id='essay-tips'>Essay tips</h3>
 
 {% include 'home/docs/essay-tips-snippet.html' %}
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+
+<h2 id='legal-names'>Legal names in Outreachy</h2>
+
+<p>Outreachy interns must fill out three forms:</p>
+<ol>
+	<li><a href="{% url 'account' %}">Outreachy Code of Conduct</a></li>
+	<li>W-9 or W8-BEN tax form</li>
+	<li>Payment information</li>
+</ol>
+
+<p>
+Interns must put their legal names on these forms. Some interns may be worried about using their legal name. Outreachy organizers understand your worries. Outreachy supports transgender and non-binary people. Outreachy supports domestic violence survivors. Outreachy supports people who wish to avoid using their legal name on the internet.
+</p>
+
+<p>
+Outreachy supports intern privacy. Mentors and coordinators will not know your legal name. Forms that require your legal name will not be shared with mentors and coordinators.
+</p>
+
+<p>
+The Outreachy website <a href="{% url 'account' %}">account preferences</a> will allow you to set a "public name". This public name will be displayed to mentors and coordinators. It will also be displayed on the <a href="{% url 'alums' %}">alums page</a> if you are selected as an intern. You can set your "public name" to a shortened name, a pseudonym, or your name that affirms your gender identity.
+</p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
