Simplify English in essay tips section

--- a/home/templates/home/docs/essay-tips-snippet.html
+++ b/home/templates/home/docs/essay-tips-snippet.html
@@ -3,24 +3,44 @@ Please review the essay questions carefully.
 Make sure to review the help text below the question.
 </p>
 
-<p>
-On average, applicants who are accepted write 500 to 900 characters per essay question.
-Essay answers are limited to 1000 characters. 1000 characters is about 200 words.
-</p>
+<p><b>Essay length</b></p>
 
 <p>
+Applicants often ask, "How much should I write?"
+You should write enough to answer the essay question.
 We prefer essays with detailed examples or stories from your life.
 </p>
 
 <p>
-Two questions ask about the discrimination you face in your learning environment or while building your skills.
+Essay answers are limited to 1000 characters. 1000 characters is about 200 words.
+</p>
+
+<p>
+Applicants who are accepted usually write around 500 to 900 characters per essay.
+</p>
+
+<p><b>Essay content</b></p>
+
+<p>
+One question asks about discrimination in your learning environment.
+</p>
+
+<p>
 We are <b>not</b> asking you to provide details about your completed classes, your educational background, or what skills you have.
 We are asking you to talk about about the <b>discrimination</b> you face in your learning environment or while building your skills.
 </p>
 
 <p>
+One essay question refers to "the technology industry of your country".
+We want to know about the technology industry in the country you will be living in during the internship.
+Talk about the discrimination you face in that country's technology industry. Do not talk about the discrimination you will face in the international technology industry.
+</p>
+
+<p><b>Assume readers live in a different culture</b></p>
+
+<p>
 When talking about the discrimination you face, assume the reader lives in a different culture than you.
-Provide background about your culture, including links to articles or blogs if needed.
+Provide background about your culture. You may need to include links to statistics, articles, or blogs posts.
 </p>
 
 <p>
@@ -37,26 +57,42 @@ Clear: "I am a Muslim in France. Muslims make up less than 2.3% of France's popu
 Provide specific examples of the discrimination you have faced.
 Provide a short summary of what happened.
 Talk about how the discrimination you faced impacts your education or career.
-Discrimination could be impacting you today or you may worry it will impact you in the future.
+Talk about how discrimination impacts you in the past and today.
+Talk about how you fear discrimination will impact you in the future.
+</p>
+
+<p><b>Talking about violence</b></p>
+
+<p>
+Some applicants may have experienced violence.
+It may be hard for them to talk about their experiences.
+</p>
+<p>
+You do not need to share detailed descriptions of violence, such as:
+</p>
+<ul>
+	<li>sexual assault or physical sexual harassment</li>
+	<li>government or police violence</li>
+	<li>violence against refugees</li>
+	<li>genocide</li>
+</ul>
+<p>
+Instead, say that you face this type of violence. Tell us how it impacts your education or career.
 </p>
 
 <p>
-We do not want writing an essay to re-traumatize survivors of violence.
-There is no need to share detailed descriptions of sexual harassment or assault.
-You do not need to share the details of why you are a refugee.
-Instead, state that you face this type of discrimination, specify who is harassing or discriminating against you, and how it impacts your education or career.
+If you talk about violence, please include a content warning in the last field. This helps our applicant reviewers mentally prepare to read your essay.
 </p>
 
-<p>
-One essay question refers to "the technology industry of your country".
-We want to know about the technology industry in the country you will be living in during the internship.
-Talk about the discrimination you face in that country's technology industry, not in the international technology industry.
-</p>
+<p><b>No resumes or references</b></p>
 
 <p>
 Please do not put personal contact information in your essays.
-We do not require references and will not follow up with references.
+We do not require reference contact information.
+We will not follow up with references.
+<p>
+
+</p>
 Please do not put links to your resume in your essays.
 We do not read resumes.
 </p>
-
